# prelegal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  catalog.json
.claude/: settings.json
backend/: pyproject.toml
backend/src/prelegal/: auth.py  db.py  main.py  routes_auth.py
backend/tests/: conftest.py  test_auth.py
frontend/: .gitignore  MANUAL_TESTS.md  README.md  jest.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/components/: NdaForm.tsx  NdaPreview.tsx
frontend/components/__tests__/: NdaForm.test.tsx  NdaPreview.test.tsx
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
