[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prelegal"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
